fixed align issue on services icon

--- a/assets/css/style-portum.css
+++ b/assets/css/style-portum.css
@@ -6319,8 +6319,6 @@ input[type='button']:active
 {
     font-size: 36px;
 
-    display: block;
-
     width: 36px;
     height: 36px;
     padding: 20px;
