--- a/assets/scss/partials/sections/_02-section-services.scss
+++ b/assets/scss/partials/sections/_02-section-services.scss
@@ -15,7 +15,6 @@
         border-style: solid;
         color: #fff;
         font-size: 36px;
-        display: block;
     }
 }
 
